--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author_title: 'Web Developer & Front end'
 avatar: css/images/avatar.png
 location: 'Beijing, China'
 follow: https://github.com/korubak/
-language: en
+language: zh-CN
 timezone:
 since: 2015 # The start year showing in your copyright section.
 
